tests/machine/x/java/group_by_multi_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_by_multi_join101475529/001/GroupByMultiJoin.java:104: error: bad operand types for binary operator '!='
                if (!(Objects.equals(n.name, "A") != null)) continue;
                                                  ^
  first type:  boolean
  second type: <null>
/tmp/TestCompileValidProgramsgroup_by_multi_join101475529/001/GroupByMultiJoin.java:121: error: unexpected type
    for (Map.Entry<int,List<PartValue>> __e : _groups2.entrySet()) {
                   ^
  required: reference
  found:    int
2 errors


  1| let nations = [
  2|   { id: 1, name: "A" },